--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="title">lwday_Frankengame</div>
 		<br><br><h4>NOTE: The reason why the last level is untextured is because the tilemap kept getting corrupted, even when the scene was saved, reloaded, deleted, built from a brand new scene, etc. It's possible this might be a bug in the Unity engine, and I currently cannot do anything about it to fix it. </h4>
 		<br><h4>The title-screen originally had a tileset land display, but it kept getting corrupted as well.</h4>
-		<br><br><h4><a href="https://github.com/ProcessingSilence/lwday-frankengame">Github Link</a></h4>
+		<br><h4><a href="https://github.com/ProcessingSilence/lwday-frankengame">Github Link</a></h4>
       </div>
     </div>
   </body>
